--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     # "toolz",
     # "tqdm",
     "coloraide>=4.0",
+    "kmedoids>=0.5.3.1",
     "nested-dict-tools>=0.4.0",
     "rich>=13.9.4",
     "scikit-learn>=1.5.2",
