--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     "kajihs-utils[pyplot]>=0.3.0",
     "kmedoids>=0.5.3.1",
     "nested-dict-tools>=0.4.0",
+    "pyyaml>=6.0.2",
     "rich>=13.9.4",
     "scikit-learn>=1.5.2",
     "yellowbrick>=1.5",
